Trying, yet again, to fix the background image issue on iOS devices

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -207,8 +207,10 @@ footer {
 }
 
 @media (max-width: 777px) {
+  html.open {
+    overflow: hidden;
+  }
   body.open {
-    position: fixed; 
     overflow: hidden;
   }
   header .menu-button {
